<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddQuestionsActivity">


        <EditText
            android:id="@+id/addQuestionDialog_txt_addQuestionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/add_question"
            android:inputType="textMultiLine"
            android:textColorHint="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addQuestionDialog_txt_addAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addQuestionDialog_txt_addQuestionTitle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/add_answer_a"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addQuestionDialog_txt_addAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addQuestionDialog_txt_addAnswer1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/add_answer_b"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addQuestionDialog_txt_addAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addQuestionDialog_txt_addAnswer2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/add_answer_c"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addQuestionDialog_txt_addAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addQuestionDialog_txt_addAnswer3"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/add_answer_d"
            android:inputType="textPersonName" />


        <RadioGroup
            android:id="@+id/addQuestionDialog_CorrectanswerRadioGrpup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addQuestionDialog_textview"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="4">

            <RadioButton
                android:id="@+id/addQuestionDialog_rb_Answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:buttonTint="@color/MainRedColor"
                android:checked="true"
                android:text="@string/a" />


            <RadioButton
                android:id="@+id/addQuestionDialog_rb_Answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/MainRedColor"
                android:text="@string/b" />

            <RadioButton
                android:id="@+id/addQuestionDialog_rb_Answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/MainRedColor"
                android:text="@string/c" />

            <RadioButton
                android:id="@+id/addQuestionDialog_rb_Answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/MainRedColor"
                android:text="@string/d" />

        </RadioGroup>

        <TextView
            android:id="@+id/addQuestionDialog_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addQuestionDialog_txt_addAnswer4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/correct_answer_is"
            android:textColor="@color/MainRedColor" />

        <Button
            android:id="@+id/btn_addQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addQuestionDialog_CorrectanswerRadioGrpup"
            android:layout_alignParentStart="true"
            android:layout_margin="30dp"
            android:background="@drawable/bg_botton2"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_add_red"
            android:elevation="20dp"
            android:padding="10dp"
            android:text="@string/add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/addQuestionDialog_btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addQuestionDialog_CorrectanswerRadioGrpup"
            android:layout_alignParentEnd="true"
            android:layout_margin="30dp"
            android:background="@drawable/bg_botton"
            android:backgroundTint="@color/MainRedColor"
            android:elevation="20dp"
            android:text="@string/done"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>


