<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddQuizActivity">


        <TextView
            android:id="@+id/tv_make_Quiz_Header"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:text="@string/please_make_unique_nquiz_title_nfor_your_quiz"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/txt_subject"
            android:layout_below="@+id/tv_make_Quiz_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/subject"
            android:textColor="@color/MainRedColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_subject"
         android:layout_marginStart="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:text="@string/branch"
            android:textColor="@color/MainRedColor"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextQuizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_branch"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:hint="@string/add_quiz_title"
            android:inputType="textPersonName"
            android:textColorHint="@color/MainRedColor" />


        <Button
            android:id="@+id/Btn_Continue_Make_Quiz"
            android:elevation="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextQuizTitle"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_botton"
            android:padding="20dp"
            android:text="@string/continues"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Btn_Cancle_Make_Quiz"
            android:elevation="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextQuizTitle"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_botton2"
            android:padding="20dp"
            android:text="@string/cancle"
            android:textColor="@color/white" />

    </RelativeLayout>
</layout>