<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/brown_50"
        android:elevation="20dp">


        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_edit_24" />

        <TextView
            android:id="@+id/txt_questiontitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:text="@string/question"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_delete_24" />


        <RadioGroup
            android:id="@+id/answersradiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/txt_questiontitle"
            android:layout_marginStart="20dp">

            <RadioButton
                android:id="@+id/rb_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/MainRedColor"
                android:clickable="false"
                android:text="@string/answer_1" />


            <RadioButton
                android:id="@+id/rb_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/MainRedColor"
                android:clickable="false"
                android:text="@string/answer_2" />

            <RadioButton
                android:id="@+id/rb_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/MainRedColor"
                android:clickable="false"
                android:text="@string/answer_3" />

            <RadioButton
                android:id="@+id/rb_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/MainRedColor"
                android:clickable="false"
                android:text="@string/answer_4" />
        </RadioGroup>

        <TextView
            android:id="@+id/txt_correct_answer_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answersradiogroup"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/the_correct_answer_is"
            android:textSize="15sp" />

    </RelativeLayout>
</layout>